Dashboard.bat. file